# annotator-swiss-knife

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISTRIBUTION_CHECKLIST.md  DISTRIBUTION_GUIDE.md  LICENSE  LaunchAnnotationToolkit.command  MODERNIZATION_COMPLETE.md  QUICK_START_CARD.md  README.md  TESTING.md  UI_MODERNIZATION_SUMMARY.md  USER_SETUP_GUIDE.md  WINDOWS_SETUP_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
annotation_toolkit/: __init__.py  cli.py  config.py
annotation_toolkit/adapters/: __init__.py  file_storage.py
annotation_toolkit/core/: __init__.py  base.py
annotation_toolkit/core/conversation/: __init__.py  generator.py  visualizer.py
annotation_toolkit/core/text/: __init__.py  dict_to_bullet.py  text_cleaner.py  text_collector.py
annotation_toolkit/di/: __init__.py  bootstrap.py  container.py  decorators.py  exceptions.py  interfaces.py  registry.py
annotation_toolkit/ui/: __init__.py
annotation_toolkit/ui/cli/: __init__.py  commands.py
annotation_toolkit/ui/gui/: __init__.py  app.py  sidebar.py  theme.py
annotation_toolkit/ui/gui/assets/: icon.icns
annotation_toolkit/ui/gui/components/: __init__.py  category_filter.py  conversation_preview.py  draggable_field.py  error_banner.py  file_drop_area.py  glass_button.py  json_highlighter.py  json_tree_view.py  loading_overlay.py  search_bar.py  text_widgets.py  tool_card.py
annotation_toolkit/ui/gui/dialogs/: __init__.py  template_library.py  turn_edit_dialog.py
annotation_toolkit/ui/gui/themes/: __init__.py  glass_theme.py  stylesheets.py  theme_manager.py
annotation_toolkit/ui/gui/utils/: __init__.py  accessibility.py  animations.py  auto_save.py  error_display.py  fonts.py  session_manager.py  shortcuts.py  undo_redo.py
annotation_toolkit/ui/gui/utils/json/: __init__.py  formatting.py
annotation_toolkit/ui/gui/widgets/: __init__.py  base_tool_widget.py  conversation_generator_widget.py  custom_widgets.py  dict_widget.py  json_fixer.py  json_widget.py  main_menu.py  text_cleaner_widget.py  text_collector_widget.py
annotation_toolkit/utils/: ERROR_HANDLING.md  __init__.py  color_utils.py  error_handler.py  errors.py  file_utils.py  logger.py  profiling.py  recovery.py  resources.py  security.py  streaming.py  structured_logging.py  validation.py
annotation_toolkit/utils/json/: __init__.py  fixer.py  formatter.py  parser.py
annotation_toolkit/utils/text/: __init__.py  formatting.py
annotation_toolkit/utils/xml/: __init__.py  formatter.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION_REFERENCE.md  DEPENDENCY_INJECTION_IMPLEMENTATION.md  PERFORMANCE.md  README_BUILD.md  RELEASE_PROCESS.md  SECURITY.md  TESTING_GUIDE.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_SUMMARY.md  User_Manual.md  data_flow_diagram.md
scripts/: README.md
scripts/run/: README.md  run.bat  run.ps1  run.sh
scripts/setup/: README.md  setup.bat  setup.ps1  setup.sh
scripts/test/: README.md  ci.sh  fast.sh  full.sh  parallel.sh  slow.sh
scripts/utils/: convert_icon.py
tests/: README.md  __init__.py  run_tests.py  test_base.py  test_cli.py  test_code_quality_improvements.py  test_config.py  test_dependency_injection.py
tests/core/: __init__.py  test_conversation_generator.py  test_dict_to_bullet.py  test_json_visualizer.py  test_text_cleaner.py  test_text_collector.py
tests/di/: test_decorators.py  test_exceptions.py  test_registry.py
tests/test_adapters/: test_file_storage.py
tests/test_core/: __init__.py  test_dict_to_bullet.py  test_format_utils.py
tests/ui/cli/: test_commands.py
tests/ui/gui/: conftest.py
tests/ui/gui/utils/: test_auto_save.py  test_session_manager.py  test_undo_redo.py
tests/utils/: __init__.py  test_color_utils.py  test_error_handler.py  test_errors.py  test_file_utils.py  test_logger.py  test_profiling.py  test_recovery.py  test_resources.py  test_security.py  test_streaming.py  test_structured_logging.py  test_validation.py
tests/utils/json/: __init__.py  test_fixer.py  test_formatter.py  test_parser.py
tests/utils/test_xml/: __init__.py  test_formatter.py
tests/utils/text/: __init__.py  test_formatting.py
